RESOLVED FIXED264433
REGRESSION(270374@main): [curl] Some wss WebSocket tests are failing
https://bugs.webkit.org/show_bug.cgi?id=264433
Summary REGRESSION(270374@main): [curl] Some wss WebSocket tests are failing
Fujii Hironori
Reported 2023-11-08 13:37:34 PST
After 270374@main (bug#264366), some wss WebSocket tests are failing Buildbot: builder WinCairo-64-bit-Release-Tests build 2662 (270376@main) https://build.webkit.org/#/builders/728/builds/2662 http/tests/websocket/tests/hybi/simple-wss.html [ Failure ] imported/w3c/web-platform-tests/cookies/schemeful-same-site/schemeful-websockets.sub.tentative.html [ Failure ] imported/w3c/web-platform-tests/cookies/secure/set-from-wss.https.sub.html [ Failure ] http/tests/websocket/tests/hybi/secure-cookie-secure-connection.pl [ Timeout ]
Attachments
Fujii Hironori
Comment 1 2023-11-08 13:39:56 PST
https://github.com/WebKit/WebKit/blob/34b59cbee7578992a6965ad17fa0633e95d516a5/Source/WebKit/NetworkProcess/curl/WebSocketTaskCurl.cpp#L43-L44 > if (request.url().protocolIs("wss"_s) && WebCore::DeprecatedGlobalSettings::allowsAnySSLCertificate()) > WebCore::CurlContext::singleton().sslHandle().setIgnoreSSLErrors(true); This code doesn't work as expected after the change.
Fujii Hironori
Comment 2 2023-11-08 14:13:10 PST
270405@main skips the tests.
Radar WebKit Bug Importer
Comment 3 2023-11-15 13:38:18 PST
Kenji Shukuwa
Comment 4 2023-11-15 21:05:54 PST
EWS
Comment 5 2023-11-15 22:20:55 PST
Committed 270809@main (d5bb238e93ae): <https://commits.webkit.org/270809@main> Reviewed commits have been landed. Closing PR #20586 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.