[Curl] Implements authentication challenge handling when server certificate evaluation fails in the WebSocket https://bugs.webkit.org/show_bug.cgi?id=264433

Reviewed by Fujii Hironori.

The WebSocket implementation of the Curl port did not implement handling
of authentication challenges when evaluating server certificates fails.
This causes some wss WebSocket tests to fail after 270374@main (bug#264366).
To solve this problem, we implement authentication challenge handling
to WebSocket.

* LayoutTests/platform/wincairo/TestExpectations:
* Source/WebCore/platform/network/curl/CurlStream.cpp:
(WebCore::CurlStream::CurlStream):
(WebCore::CurlStream::notifyFailure):
* Source/WebCore/platform/network/curl/CurlStream.h:
(WebCore::CurlStream::create):
* Source/WebCore/platform/network/curl/CurlStreamScheduler.cpp:
(WebCore::CurlStreamScheduler::createStream):
* Source/WebCore/platform/network/curl/CurlStreamScheduler.h:
* Source/WebKit/NetworkProcess/curl/NetworkSessionCurl.cpp:
(WebKit::NetworkSessionCurl::createWebSocketTask):
(WebKit::NetworkSessionCurl::didReceiveChallenge):
* Source/WebKit/NetworkProcess/curl/NetworkSessionCurl.h:
* Source/WebKit/NetworkProcess/curl/WebSocketTaskCurl.cpp:
(WebKit::WebSocketTask::WebSocketTask):
(WebKit::WebSocketTask::networkSession):
(WebKit::WebSocketTask::didFail):
(WebKit::WebSocketTask::tryServerTrustEvaluation):
* Source/WebKit/NetworkProcess/curl/WebSocketTaskCurl.h:
(WebKit::WebSocketTask::webProxyPageID const):
(WebKit::WebSocketTask::topOrigin const):

Canonical link: https://commits.webkit.org/270809@main