Source/WebKit/NetworkProcess/curl/NetworkSessionCurl.h
@@ -25,11 +25,13 @@
 
 #pragma once
 
+#include "AuthenticationChallengeDisposition.h"
 #include "NetworkSession.h"
 
 namespace WebKit {
 
 struct NetworkSessionCreationParameters;
+class WebSocketTask;
 
 class NetworkSessionCurl final : public NetworkSession {
 public:
@@ -41,6 +43,8 @@ public:
     ~NetworkSessionCurl();
 
     void clearAlternativeServices(WallTime) override;
+
+    void didReceiveChallenge(WebSocketTask&, WebCore::AuthenticationChallenge&&, CompletionHandler<void(WebKit::AuthenticationChallengeDisposition, const WebCore::Credential&)>&&);
 
 private:
     std::unique_ptr<WebSocketTask> createWebSocketTask(WebPageProxyIdentifier, std::optional<WebCore::FrameIdentifier>, std::optional<WebCore::PageIdentifier>, NetworkSocketChannel&, const WebCore::ResourceRequest&, const String& protocol, const WebCore::ClientOrigin&, bool, bool, OptionSet<WebCore::AdvancedPrivacyProtections>, WebCore::ShouldRelaxThirdPartyCookieBlocking, WebCore::StoredCredentialsPolicy) final;
